<resources>
    <string name="app_name">Latest News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="media">Media</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="art_activities">ART ACTIVITIES</string>
</resources>