<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none"
      android:menuCategory="container"
        >
        <item
            android:id="@+id/homeActivity"
            android:icon="@drawable/home_icon"
            android:title="@string/home"
            app:showAsAction="collapseActionView" />
        <item
            android:id="@+id/mediaFragment"
            android:icon="@drawable/media_social_icon"
            android:title="@string/media"/>
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/about_icon"
            android:title="@string/about_us" />

        <item
            android:id="@+id/contactFragment"
            android:icon="@drawable/contact_logo"
            android:title="@string/contact_us" />

        <item
            android:id="@+id/languageFragment"
            android:icon="@drawable/language_icon"
            android:title="@string/language" />
    </group>

</menu>